# sinfourmisRenderer2025

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md
src/: data_type.hpp  dynamic_shape.hpp  edge.cpp  group.cpp  main.cpp  node.cpp
src/primitives/: arc.cpp  arc.hpp
